always fetch a larger number of records, allow fetch and display limits to be set in params, improve styling

--- a/searchcompare/scomp.css
+++ b/searchcompare/scomp.css
@@ -37,6 +37,11 @@ th {
   text-align: left;
 }
 
+.rank {
+  text-align: right;
+  vertical-align: middle;
+}
+
 .sig {
   font-size: small;
   text-align: left;
@@ -67,6 +72,8 @@ th {
 }
 
 .pctcmp {
+  text-align: right;
+  vertical-align: middle;
   color: gray;
 }
 
