--- a/searchcompare/scomp.css
+++ b/searchcompare/scomp.css
@@ -22,6 +22,25 @@ h1 {
   font-size: 75%;
 }
 
+.hidden {
+  display: none;
+}
+
+#scompParams {
+  margin: 1em 0;
+  width: 100%;
+}
+
+.paramInput {
+  width: calc(100% - 16px);
+  margin: 0;
+  padding: 0;
+}
+
+.paramSubmit {
+  text-align: right;
+}
+
 table {
   border-collapse: collapse;
   border-spacing: 0 0;
